--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;600;700&display=swap');
     </style>
 
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;500;600;700;800&display=swap');
+</style>
+
     <!-- Style -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -52,7 +56,7 @@
                 <h1>Laissez-vous guider par <strong>l'immensité</strong> de l'univers.</h1>
                 <p>Nous vous offrons l'éxperience unique de pouvoir échapper à l'attraction terrestre en quelques clics. Le temps d'un week-end ou d'une année sabbatique, prenez place à bord d'un <a href="#">vaisseau</a> et explorez la grandeur de notre galaxie.</p>
             </div>
-            <img src="/assets/rocket.jpeg" alt="Fusée qui décolle">
+             <img src="/assets/rocket.jpeg" alt="Fusée qui décolle"> <!--Image a changer par dessin / Plus moderne -->
         </section>
     </main>
          <!-- <section class="destinations" id="destinations">
