Correction bug dépassement right de l'image heading

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                 <h1>Laissez-vous guider par <strong>l'immensité</strong> de l'univers.</h1>
                 <p>Nous vous offrons l'éxperience unique de pouvoir échapper à l'attraction terrestre en quelques clics. Le temps d'un week-end ou d'une année sabbatique, prenez place à bord d'un <a href="#">vaisseau</a> et explorez la grandeur de notre galaxie.</p>
             </div>
-             <img src="/assets/rocket.png" alt="Fusée qui décolle"> <!--Image a changer par dessin / Plus moderne -->
+            <div class="heading_img">
+                <img src="/assets/rocket.png" alt="Fusée qui décolle">
+            </div>
         </section>
     </main>
          <!-- <section class="destinations" id="destinations">
