Modification du paragraphe du heading - Ajout d'un margin bottom sur les p du heading

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <section class="heading">
             <div class="heading_text-heading">
                 <h1>Laissez-vous guider par <strong>l'immensité</strong> de l'univers.</h1>
-                <p>Nous vous offrons l'éxperience unique de pouvoir échapper à l'attraction terrestre en quelques clics. Le temps d'un week-end ou d'une année sabbatique, prenez place à bord d'un <a href="#">vaisseau</a> et explorez la grandeur de notre galaxie.</p>
+                <p>Nous vous offrons l'éxperience unique de pouvoir échapper à l'attraction terrestre en quelques clics. Le temps d'un week-end ou d'une année sabbatique.</p> 
+                <p>Prenez place à bord d'un <a href="#">vaisseau</a> et explorez la grandeur de notre galaxie.</p>
             </div>
             <div class="heading_img">
                 <img src="/assets/rocket.png" alt="Fusée qui décolle">
