--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             </div>
         </section>
     </main>
-         <!-- <section class="destinations" id="destinations">
+         <section class="destinations" id="destinations">
             <h2>Des idées pour votre prochaine <strong>déstination</strong></h2>
             <div class="card-destinations">
                 <div class="card">
-                    <img src="/assets/mars.jpg" alt="Mars">
+                    <img src="/assets/Planets/Mars.jpg" alt="Mars">
                     <div class="card-title">
                         <h3>Mars</h3>
                         <p>78,34 millions de km</p>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="/assets/venus.jpg" alt="Venus">
+                    <img src="/assets/Planets/Venus.jpg" alt="Venus">
                     <div class="card-title">
                         <h3>Venus</h3>
                         <p>41,40 millions de km</p>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="/assets/saturn.jpg" alt="Saturne">
+                    <img src="/assets/Planets/Saturn.jpg" alt="Saturne">
                     <div class="card-title">
                         <h3>Saturne</h3>
                         <p>1275 millions de km</p>  
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="/assets/alpha-centauri.jpg" alt="Alpha-Centauri">
+                    <img src="/assets/Planets/Alpha.jpg" alt="Alpha-Centauri">
                     <div class="card-title">
                         <h3>Alpha-Centauri</h3>
                         <p>4,367 années-lumière</p>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-        </section>-->
+        </section>
 
 
 
