Ajout du footer html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,19 @@
 
 
 
-
+        <footer>
+            <div class="footer_top">
+                <div class="about"></div>
+                <div class="social"></div>
+                <div class="legal"></div>
+            </div>
+            <div class="footer_bottom">
+                <div class="copyright">
+                    Blckmatr / 2022
+                </div>
+            </div>
+            
+        </footer>
 
 
 
