Ajout du fichier social dans les assets, avec les SVG reseaux sociaux

--- a/index.html
+++ b/index.html
@@ -119,16 +119,15 @@
 
         <footer>
             <div class="footer_top">
-                <div class="about"></div>
+                <div class="about"> A propos</div>
                 <div class="social"></div>
-                <div class="legal"></div>
+                <div class="legal">Mentions légales</div>
             </div>
             <div class="footer_bottom">
                 <div class="copyright">
                     Blckmatr / 2022
                 </div>
             </div>
-            
         </footer>
 
 
