CSS footer mobile OK

--- a/index.html
+++ b/index.html
@@ -119,13 +119,18 @@
 
         <footer>
             <div class="footer_top">
-                <div class="about"> A propos</div>
-                <div class="social"></div>
-                <div class="legal">Mentions légales</div>
+                <div class="footer_top_about"> A propos</div>
+                <div class="footer_top_social">
+                    <img src="/assets/social/instagram.svg" alt="Instagram">
+                    <img src="/assets/social/twitter.svg" alt="Twitter">
+                    <img src="/assets/social/youtube.svg" alt="Youtube">
+                    <img src="/assets/social/github.svg" alt="Github">
+                </div>
+                <div class="footer_top_legal">Mentions légales</div>
             </div>
             <div class="footer_bottom">
                 <div class="copyright">
-                    Blckmatr / 2022
+                    © Blckmatr / 2022
                 </div>
             </div>
         </footer>
