Correction chiffres Mars

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p>78,34 millions de km</p>
                     </div>
                     <div class="card-description">
-                        La planète rouge : Envolez-vous vers sa surface rocheuse et partez explorer les plus grands édifices géologiques de notre système solaire. Escaladez l’Olympus Mons, culminant à 21 000 mètres d’altitude ou plongez dans les profondeurs de la Valles Marineris et ses 8 000 mètres de profondeur.
+                        La planète rouge : Envolez-vous vers sa surface rocheuse et partez explorer les plus grands édifices géologiques de notre système solaire. Escaladez l’Olympus Mons, culminant à 21000 mètres d’altitude ou plongez dans les profondeurs de la Valles Marineris et ses 8000 mètres de profondeur.
                     </div>
                 </div>
 
