Correction bugs affichage, correction hauteur section destinations, ajout effet hover cartes destination pour desktop

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <p>4,367 années-lumière</p>
                     </div>
                     <div class="card-description">
-                        Embarquez à bord de l’un de nos vaisseaux (très) long courrier, et rendez visite au système planétaire voisin. Avec ses 3 étoiles, Rigil Kentaurus, Toliman et Proxima Centauri, les amateurs de beaux paysages seront servis et auront l’opprotunité d’assister à plusieurs couchers de soleil par jour.
+                        Embarquez à bord de l’un de nos vaisseaux (très) long courrier, et rendez visite au système planétaire voisin. Avec ses 3 étoiles, Rigil Kentaurus, Toliman et Proxima Centauri, les amateurs de beaux paysages seront servis et auront l’opportunité d’assister à plusieurs couchers de soleil par jour.
                     </div>
                 </div>
             </div>
