Ajout des assets fusée + essai d'affichage dans la section flotte

--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
 
 
         <section class="flotte">
-
+            
+                <img src="/assets/Rockets/rocket-01.png">
+                <img src="/assets/Rockets/rocket-02.png">
+                <img src="/assets/Rockets/rocket-03.png">
+                <img src="/assets/Rockets/rocket-04.png">
+            
         </section>
 
 
